--- a/index.html
+++ b/index.html
@@ -5,38 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>사진 업로드</title>
   <style>
-    html, body { height:100%; margin:0; background:#0000; }
+    :root { --banner-h: 56px; } /* default */
+    @media (min-width:0) {
+      /* 한국어/일본어 등에서 배너가 더 클 수 있어 기본값을 조금 키움 */
+      :root[lang^="ko"], :root[lang^="ja"] { --banner-h: 64px; }
+    }
+
+    html, body { height: 100%; margin:0; background:#fafafa; }
     .frame-wrap { position:fixed; inset:0; overflow:hidden; background:#fafafa; }
+
+    /* use dynamic viewport units for mobile address-bar shrink/expand */
     iframe {
       position:absolute; inset:0;
-      width:100%; height:calc(100% + 56px);
+      width:100%;
+      height: calc(100dvh + var(--banner-h)); /* fallback to 100vh in older browsers */
+      height: calc(100vh + var(--banner-h));
       border:0;
-      transform: translateY(-56px); /* 상단 GAS 배너 시각적 숨김 */
+      transform: translateY(calc(-1 * var(--banner-h)));
+      background:#fafafa;
     }
+
+    /* helper UI (hidden) */
+    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
   </style>
 </head>
 <body>
   <div class="frame-wrap">
-    <iframe id="uploader" allow="camera *; clipboard-write *"></iframe>
+    <iframe id="uploader"
+            allow="camera *; microphone *; clipboard-read *; clipboard-write *; geolocation *; fullscreen *; display-capture *; autoplay *; xr-spatial-tracking *">
+    </iframe>
   </div>
-  <script>
-    // === 여기를 네 값으로 바꾸세요 ===
-    const EXEC_URL = "https://script.google.com/macros/s/AKfycbx-e4VS-5QQCFR4swXi7nvOjKPxVV5mZIzf7JE6ZsnZsmstN2IGH_RwDD7cW3CeVytj/exec"; // Apps Script /exec URL
-    const REDIRECT_URL = "https://toourguest.com/cards/jh-ke#guest-snap"; // 업로드 완료 후 돌아갈 주소(앵커 포함)
-    // =================================
 
-    // 업로더 로드
+  <div class="sr-only" aria-live="polite" id="msg"></div>
+
+  <script>
+    // === 설정: 아래 두 값만 바꾸세요 ===
+    const EXEC_URL = "PUT_YOUR_GAS_EXEC_URL_HERE"; // Apps Script /exec
+    const REDIRECT_URL = "https://toourguest.com/cards/jh-ke#guest-snap";
+    // ===================================
+
+    // banner height override via query (?bh=72) if needed
+    const q = new URLSearchParams(location.search);
+    const bh = q.get('bh');
+    if (bh) document.documentElement.style.setProperty('--banner-h', parseInt(bh,10)+'px');
+
+    // load uploader with redirect param
     const url = new URL(EXEC_URL);
     const sp = new URLSearchParams(url.search);
     sp.set('redirect', encodeURIComponent(REDIRECT_URL));
     url.search = sp.toString();
     document.getElementById('uploader').src = url.toString();
 
-    // 주소창을 깔끔하게: 항상 /jh_ke_photo_upload/ 로 유지
-    const prettyPathA = "/jh_ke_photo_upload/";
-    const prettyPathB = "/jh_ke_photo_upload/index.html";
-    if (location.pathname !== prettyPathA && location.pathname !== prettyPathB || location.search) {
-      history.replaceState(null, "", prettyPathA);
+    // keep pretty URL (without queries)
+    const prettyA = "/jh_ke_photo_upload/";
+    const prettyB = "/jh_ke_photo_upload/index.html";
+    if ((location.pathname !== prettyA && location.pathname !== prettyB) || location.search) {
+      history.replaceState(null, "", prettyA);
     }
   </script>
 </body>
