--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <script>
     // === 이 값만 바꾸세요 ===
     
-    const EXEC_URL = "https://script.google.com/macros/s/AKfycbwO-0bGH2oJp4-s9db13Ih-q6HgISQmMVCj8wniPSddiNHoQAfUO9lwGwN9Ydr3bDMZ/exec"; // Apps Script /exec
-    const REDIRECT_URL = "https://toourguest.com/cards/jh-ke#guest-snap";
+    const EXEC_URL = "https://script.google.com/macros/s/AKfycbyAYpOtGZDfDdWKk-5eTYV6XYYd5nRIXtk7s0MJWNh5x0rXdkmmqBK-Dne00uDaVOJV/exec"; // Apps Script /exec
+    const REDIRECT_URL = "https://toourguest.com/cards/jh-ke#:~:text=게스트%20스냅";
     // ========================
 
     // ▶ 옵션: ?bh=숫자 로 배너 높이 즉석 조정, ?showBanner=1 로 배너 숨김 해제
